<resources>
    <string name="app_name">MessageApp</string>
    <string name="main_signUp">Sign Up</string>
    <string name="main_logIn">Log In</string>
    <string name="signUp_firstName">First Name</string>
    <string name="signUp_lastName">Last Name</string>
    <string name="signUp_Email">Email</string>
    <string name="signUp_male">Male</string>
    <string name="signUp_female">Female</string>
    <string name="signUp_password">Password</string>
    <string name="addContactActivity_add_contact">Add Contact</string>
    <string name="addContact_phone">Phone</string>
    <string name="addContact_birthDate">Birth Date</string>
</resources>